--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 	
 	<link  rel="stylesheet" href="/static/style.css" type="text/css">
     
-    <title>Broadway Data - About the Data</title>
+    <title>Astronaut Data - About the Data</title>
   </head>
   <body>
 		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -25,13 +25,13 @@
               <a class="nav-link active" href="index.html">About the Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index2.html"></a>
+              <a class="nav-link" href="index2.html">Number of astronauts by year</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index3.html">Medium Quiz</a>
+              <a class="nav-link" href="index3.html">Data by Nationality</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="index4.html">Hard Quiz</a>
+              <a class="nav-link" href="index4.html"></a>
             </li>
           </ul>
         </div>
