--- a/templates/index2.html
+++ b/templates/index2.html
@@ -16,10 +16,10 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="home.html">About the Data</a>
+              <a class="nav-link" href="home.html">About the Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index2.html">Number of astronauts by year</a>
+              <a class="nav-link active" href="index2.html">Number of astronauts by year</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index3.html">Data by Nationality</a>
@@ -30,7 +30,13 @@
           </ul>
         </div>
     </nav>
-	    <p>The data used in this web app is from the CORGIS Dataset Project and can be found 
-      <a href="https://corgis-edu.github.io/corgis/json/broadway/">here</a>. </p>
+	<h2>Select a year</h2>
+	<form action="/showFact">
+          <select name="year"> Select Year <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
+            {{ state_options }}
+          </select>
+		<br><br>
+		<input type="submit">
+	</form>
   </body>
 </html>
