--- a/templates/index3.html
+++ b/templates/index3.html
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="home.html">About the Data</a>
+              <a class="nav-link" href="home.html">About the Data</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index2.html">Number of astronauts by year</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index3.html">Data by Nationality</a>
+              <a class="nav-link active" href="index3.html">Data by Nationality</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link" href="index4.html"></a>
@@ -30,7 +30,8 @@
           </ul>
         </div>
     </nav>
-	    <p>The data used in this web app is from the CORGIS Dataset Project and can be found 
-      <a href="https://corgis-edu.github.io/corgis/json/broadway/">here</a>. </p>
+
+
+
   </body>
 </html>
