--- a/templates/home.html
+++ b/templates/home.html
@@ -31,6 +31,7 @@
         </div>
     </nav>
 	    <p>The data used in this web app is from the CORGIS Dataset Project and can be found 
-      <a href="https://corgis-edu.github.io/corgis/json/broadway/">here</a>. </p>
+      <a href="https://corgis-edu.github.io/corgis/json/broadway/">here</a>. The data in this website is about Astronaut missons and information from 1959 to 2019. In the profile for the astronauts it shares the their personal information like their name, gender, birth year, nationality, if they were in the military, and the group that they worked with.	  </p>
+		<p> The data also shares their misson information such as their lifetime misson count, misson duration, and eta duration. It also shares 
   </body>
 </html>
