--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="mystyle.css">
+ <link rel="stylesheet" href="static/mystyle.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="myscript.js"></script>
+   <script src="static/myscript.js"></script>
     
     <title>Astronaut Data - About the Data</title>
   </head>
@@ -19,7 +19,7 @@
               <a class="nav-link active" href="home.html">About the Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index2.html">Number of astronauts by year</a>
+              <a class="nav-link" href="/showYear">Number of astronauts by year</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="index3.html">Data by Nationality</a>
