--- a/templates/index2.html
+++ b/templates/index2.html
@@ -31,9 +31,9 @@
         </div>
     </nav>
 	<h2>Select a year</h2>
-	<form action="/showFact">
-          <select name="year"> Select Year <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
-            {{ state_options }}
+	<form action="/showYear">
+          <select name="year"> Select A Year <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
+            {{ year_options }}
           </select>
 		<br><br>
 		<input type="submit">
