--- a/templates/index3.html
+++ b/templates/index3.html
@@ -19,7 +19,7 @@
               <a class="nav-link" href="home.html">About the Data</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index2.html">Number of astronauts by year</a>
+              <a class="nav-link" href="/showYear">Number of astronauts by year</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="index3.html">Data by Nationality</a>
