--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="home.html">About the Data</a>
+              <a class="nav-link active" href="/">About the Data</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/showYear">Number of astronauts by year</a>
