--- a/templates/index2.html
+++ b/templates/index2.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="mystyle.css">
+ <link rel="stylesheet" href="static/mystyle.css">
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="myscript.js"></script>
+   <script src="static/myscript.js"></script>
     
     <title>Astronaut Data - About the Data</title>
   </head>
@@ -33,10 +33,13 @@
 	<h2>Select a year</h2>
 	<form action="/showYear">
           <select name="year"> Select A Year <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
-            {{ year_options }}
+            {{ year_option }}
           </select>
 		<br><br>
-		<input type="submit">
+		<input type="submit" value="submit">
 	</form>
+	<div id="AFact">
+		<p>{{ AFact }} </p>
+	</div>
   </body>
 </html>
