--- a/templates/index2.html
+++ b/templates/index2.html
@@ -32,7 +32,7 @@
     </nav>
 	<h2>Select a year</h2>
 	<form action="/showYear">
-          <select name="year"> Select A Year <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
+          <select name="ayear"> <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
             {{ year_option }}
           </select>
 		<br><br>
