--- a/templates/index2.html
+++ b/templates/index2.html
@@ -1,35 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="static/mystyle.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="static/myscript.js"></script>
-    
-    <title>Astronaut Data - About the Data</title>
-  </head>
-  <body>
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="home.html">About the Data</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="index2.html">Number of astronauts by year</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="index3.html">Data by Nationality</a>
-            </li>
-			<li class="nav-item">
-              <a class="nav-link" href="index4.html"></a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+{% extends "layout.html" %}
+  
+{% set active_page = "NAY" %}
+
+{% block title %}Number of Astronauts by Year{% endblock %}
+
+{% block heading %}Number of Astronauts by Year{% endblock %}
+
+{% block body %}
 	<h2>Select a year</h2>
 	<form action="/showYear">
           <select name="ayear"> <!-- add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
@@ -41,5 +18,4 @@
 	<div id="AFact">
 		<p>{{ AFact }} </p>
 	</div>
-  </body>
-</html>
+{% endblock%}
