--- a/templates/index3.html
+++ b/templates/index3.html
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="mystyle.css">
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="myscript.js"></script>
-    
-    <title>Astronaut Data - About the Data</title>
-  </head>
-  <body>
-		<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="home.html">About the Data</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/showYear">Number of astronauts by year</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="index3.html">Data by Nationality</a>
-            </li>
-			<li class="nav-item">
-              <a class="nav-link" href="index4.html"></a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+ {% extends "layout.html" %}
+  
+{% set active_page = "DBN" %}
+
+{% block title %}Data by Nationality{% endblock %}
+
+{% block heading %}Data by Nationality{% endblock %}
+
+{% block body %}
+
+ <script>
+window.onload = function() {
+
+var dataPoints = [];
+
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	theme: "light2",
+	title: {
+		text: "Duration of Astronauts' Missions in the U.S."
+	},
+	axisY: {
+		title: "Minutes",
+		titleFontSize: 24,
+		includeZero: true
+	},
+	data: [{
+		type: "column",
+		yValueFormatString: "#,### Minutes",
+		dataPoints: {{data}}
+	}]
+});
 
 
+	chart.render();
 
-  </body>
-</html>
+}
+
+</script>
+<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+<script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
+{%endblock%}
